Fne 881 sprint20 mahendra  (#915)
* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

* FNE 881 changes

--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -143,7 +143,7 @@
 
                 <td>
                     <div *ngIf="isRecycleBinViewActive()">
-                        <button class="btn btn-sm btn-primary" (click)="restoreTransaction(report)">
+                        <button class="btn btn-sm btn-primary" (click)="restoreReport(report)">
                             <i class="fas fa-trash-restore"></i>
                         </button>
                     </div>
