--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -11,7 +11,16 @@
       >
       </report-type-sidebar>
     </div>
-    <div *ngIf="step === 'step_2' || step === 'step_3' || step === 'financial_summary' || step === 'transactions' || step === 'step_4' ">
+    <div
+      *ngIf="
+        step === 'step_2' ||
+        step === 'step_3' ||
+        step === 'financial_summary' ||
+        step === 'transactions' ||
+        step === 'reports' ||
+        step === 'step_4'
+      "
+    >
       <transaction-sidebar
         [step]="step"
         title="Transaction Categories"
@@ -95,7 +104,7 @@
         <app-submit></app-submit>
       </div>
 
-      <div class="form_step" [hidden]="step !== 'transactions'">
+      <div class="form_step" [hidden]="step !== 'transactions' && step !== 'reports'">
         <app-transactions (sidebarSwitch)="switchSidebar($event)" (showTransaction)="onNotify($event)">
         </app-transactions>
       </div>
