--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -189,7 +189,7 @@
                         [focusFirst]=false
                         [resultTemplate]="rtCandidate"
                         [inputFormatter]="formatterCandLastName"
-                        (selectItem)="handleSelectedCandidate($event, col?.name)"
+                        (selectItem)="handleSelectedCandidate($event, col)"
                         (keyup)="handleFormFieldKeyup($event, col)"
                         (blur)="populatePurpose(col?.name)"
                       />
@@ -214,7 +214,7 @@
                         [focusFirst]=false
                         [resultTemplate]="rtCandidate"
                         [inputFormatter]="formatterCandFirstName"
-                        (selectItem)="handleSelectedCandidate($event, col?.name)"
+                        (selectItem)="handleSelectedCandidate($event, col)"
                         (keyup)="handleFormFieldKeyup($event, col)"
                         (blur)="populatePurpose(col?.name)"
                       />                      
@@ -239,7 +239,7 @@
                         [focusFirst]=false
                         [resultTemplate]="rtOrg"
                         [inputFormatter]="formatterOrgName"
-                        (selectItem)="handleSelectedOrg($event, col?.name)"
+                        (selectItem)="handleSelectedOrg($event, col)"
                         (keyup)="handleFormFieldKeyup($event, col)"
                       />
                       <input
@@ -289,7 +289,7 @@
                         [focusFirst]=false
                         [resultTemplate]="rtCommitteeName"
                         [inputFormatter]="formatterCommitteeName"
-                        (selectItem)="handleSelectedOrg($event, col?.name)"
+                        (selectItem)="handleSelectedOrg($event, col)"
                         (keyup)="handleFormFieldKeyup($event, col)"
                       />                                       
                     </div>
