fix to remove addChild

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -493,9 +493,9 @@
               <a class="btn btn-previous btn-right" (click)="viewTransactions()">
                 View Transactions
               </a>
-              <a class="btn btn-previous btn-right" (click)="addChild()">
+              <!-- <a class="btn btn-previous btn-right" (click)="addChild()">
                 Add Child
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
