--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -62,7 +62,7 @@
         {{ cashOnHand.text }}
       </div>
       <div class="form-sidebar-item__value">
-        $0
+        ${{cashOnHandTotal | number: '1.2-2'}}
       </div>
     </div>
     <div class="form-sidebar__btns">
