--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -1,6 +1,7 @@
 <div  class="transactions__table-container">
   <div class="grid-row float-right transactions__page-item-range">
-    <div class="float-right transactions__item-range">
+    <div *ngIf="isTransactionViewActive() || isRecycleBinViewActive()"
+      class="float-right transactions__item-range">
       {{determineItemRange()}} of {{config.totalItems}}
     </div>
   </div>
@@ -8,8 +9,8 @@
     <thead>
       <tr>
         <th class="transactions__table-checkbox">
-            <!-- *ngIf="isTransactionViewActive()" -->
-          <input [@fadeInOut]  [(ngModel)]="allTransactionsSelected" type="checkbox"
+          <input 
+            [@fadeInOut] [(ngModel)]="allTransactionsSelected" type="checkbox"
             (change)="changeAllTransactionsSelected()">
         </th>
          <th [@fadeInOut] *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Type
@@ -122,7 +123,8 @@
               <i class="undo-icon"></i>
             </button>
           </div>
-          <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
+          <div [@fadeInOut] *ngIf="isTransactionViewActive()"
+              class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
             <button class="btn btn-sm btn-primary" ngbDropdownToggle>
               <i class="ellipsis-icon"></i>
