--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -144,7 +144,7 @@
                 <td>
                     <div *ngIf="isRecycleBinViewActive()">
                         <button class="btn btn-sm btn-primary" (click)="restoreReport(report)">
-                            <i class="fas fa-trash-restore"></i>
+                            <i class="undo-icon"></i>
                         </button>
                     </div>
 
