--- a/front-end/src/app/contacts/contacts.component.html
+++ b/front-end/src/app/contacts/contacts.component.html
@@ -274,6 +274,7 @@
         </div>
       </div>
       <app-contacts-table 
+        *ngIf="isContactViewActive()"
         tableType="{{contactsView}}"
       >
       </app-contacts-table>
@@ -282,10 +283,10 @@
         tableType="{{recycleBinView}}"
       >
       </app-contacts-table>
-      <app-contacts-edit
+      <!--<app-contacts-edit
         *ngIf="isEditViewActive()"
       >
-      </app-contacts-edit>
+      </app-contacts-edit>-->
   
     </div>
   </div>
