--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -81,7 +81,7 @@
                           type="radio"
                           [name]="secondaryOption"
                           [value]="childOption.value"
-                          (change)="updateTypeSelected($event)"
+                          (click)="updateTypeSelected($event)"
                         />
                           {{ childOption.text }}
                         </label>
