--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -42,7 +42,7 @@
                         type="radio"
                         id="mst-radio"
                         value="MST"
-                        (change)="updateTypeSelected($event)"
+                        (click)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                         name="reasonTypeRadio"
                       />
@@ -85,7 +85,7 @@
                         type="radio"
                         id="msm-radio"
                         value="MSM"
-                        (change)="updateTypeSelected($event)"
+                        (click)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                         name="reasonTypeRadio"
                       />
@@ -128,7 +128,7 @@
                         type="radio"
                         id="msi-radio"
                         value="MSI"
-                        (change)="updateTypeSelected($event)"
+                        (click)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                         name="reasonTypeRadio"
                       />
@@ -172,7 +172,7 @@
                         type="radio"
                         id="msw-radio"
                         value="MSW"
-                        (change)="updateTypeSelected($event)"
+                        (click)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                         name="reasonTypeRadio"
                       />
