--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -435,6 +435,7 @@
                   </ng-container>                  
                   <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'entity_type')">  
                     <ng-select #entityTypeSelect [items]="entityTypes"
+                      id="entity_type" 
                       (change)="handleEntityTypeChange($event, col)"
                       class="forms__select entity-type-select"
                       [formControlName]="col?.name"
