--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -118,7 +118,7 @@
                         "
                         (keyup)="handleFormFieldKeyup($event, col)"
                         (change)="(isFieldName(col?.name, 'contribution_date') || isFieldName(col?.name, 'expenditure_date')) 
-                                  ? doDateChange(col?.name) : null;"
+                                  ? dateChange(col?.name) : null;"
                       />
                       <input
                         *ngIf="col?.name === 'last_name'"
@@ -481,10 +481,11 @@
       <app-sub-transactions-table
         [hidden]="!isShowChildTransactions()"
         [subTransactions]="subTransactions"
+        [formType]="formType"
       ></app-sub-transactions-table>
       <div class="forms__btn-container">
         <button *ngIf="subTransactionInfo?.isParent" 
-          class="btn btn-primary btn-left" (click)="doValidateReceipt(true)">
+          class="btn btn-primary btn-left" (click)="saveForAddSub()">
           <i class="plus-icon-circle" aria-hidden="true"></i>
           Add {{ subTransactionInfo.subTransactionTypeDescription }}
         </button>
@@ -495,19 +496,20 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
-              <button *ngIf="!subTransactionInfo" 
+              <button *ngIf="!subTransactionInfo || subTransactionInfo?.isParent" 
                 class="btn btn-previous btn-left" type="button" (click)="previousStep()">
                 Previous
               </button>
-              <button *ngIf="subTransactionInfo" 
+              <button *ngIf="subTransactionInfo && subTransactionInfo.isParent === false" 
                 class="btn btn-previous btn-left" type="button" (click)="cancel()">
                 Cancel
               </button>
-              <button class="btn btn-secondary btn-right" (click)="doValidateReceipt(false)">
+              <button class="btn btn-secondary btn-right" 
+                (click)="saveOnly()">
                 Save &amp; Add Transaction
               </button>
               <a *ngIf="subTransactionInfo?.isParent === false" 
-                class="btn btn-primary btn-right" (click)="returnToParent()">
+                class="btn btn-primary btn-right" (click)="saveAndReturnToParent()">
                 Return to {{ subTransactionInfo.transactionTypeDescription }}
               </a> 
               <a class="btn btn-previous btn-right" (click)="viewTransactions()">
