--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -22,6 +22,7 @@
           <h1>
             Form 3X
             <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container>
+            <ng-container *ngIf="_transactionToEdit"> / Edit </ng-container>
           </h1>
         </div>
         <div class="float-right" ngbDropdown>
@@ -502,25 +503,36 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
-              <button *ngIf="!subTransactionInfo || subTransactionInfo?.isParent" 
+              <button *ngIf="(!subTransactionInfo || subTransactionInfo?.isParent) && !_transactionToEdit" 
                 class="btn btn-previous btn-left" type="button" (click)="previousStep()">
                 Previous
+              </button>
+              <button *ngIf="_transactionToEdit" 
+                class="btn btn-previous btn-left" type="button" (click)="viewTransactions()">
+                Cancel
               </button>
               <button *ngIf="subTransactionInfo && subTransactionInfo.isParent === false" 
                 class="btn btn-previous btn-left" type="button" (click)="cancel()">
                 Cancel
               </button>
-              <button class="btn btn-secondary btn-right" 
+              <button *ngIf="!_transactionToEdit" class="btn btn-secondary btn-right" 
                 (click)="saveOnly()">
                 Save &amp; Add Transaction
               </button>
+              <button *ngIf="_transactionToEdit" class="btn btn-secondary btn-right" 
+                (click)="updateOnly()">
+                Save
+              </button>
+              
               <a *ngIf="subTransactionInfo?.isParent === false"                 
                 class="btn btn-primary btn-right" (click)="saveAndReturnToParent()">
                 Return to {{ subTransactionInfo.transactionTypeDescription }}
               </a> 
+              <ng-container *ngIf="!_transactionToEdit">
               <a class="btn btn-previous btn-right" (click)="viewTransactions()">
                 View Transactions
-              </a>             
+              </a>
+              </ng-container>             
             </div>
           </div>
         </div>
