Fne 1485 sprint21 mahendra (#1024)
* FNE 1485 changes

* FNE 1485 changes

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -127,7 +127,7 @@
               <button class="dropdown-item" (click)="editTransaction(trx)">
                 <i class="edit-icon"></i> Edit
               </button>
-              <button class="dropdown-item" (click)="printPreview(report)">
+              <button class="dropdown-item" (click)="printAllSelected(report)">
                 <i class="fas fa-print"></i> Print
             </button>  
               <button class="dropdown-item" (click)="cloneTransaction(trx)">
