org support in sub tran table

--- a/front-end/src/app/forms/transactions/sub-transactions-table/sub-transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/sub-transactions-table/sub-transactions-table.component.html
@@ -15,6 +15,7 @@
   <tbody>
     <tr *ngFor="let trx of transactionsModel">
       <td>{{ trx.name }}</td>
+      <!-- <td>{{ determineName() }}</td> -->
       <td>{{ trx.date | date: 'MM/dd/yyyy' }}</td>
       <td class="transactions__amount">
         {{ trx.amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
