Fne satheesh sprint20 (#1032)
* fix to allow negative amount

* edit transaction UI changes - FNE 1476

* trash / restore refresh left nav summary info

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -507,7 +507,7 @@
                 class="btn btn-previous btn-left" type="button" (click)="previousStep()">
                 Previous
               </button>
-              <button *ngIf="_transactionToEdit" 
+              <button *ngIf="_transactionToEdit || (subTransactionInfo && subTransactionInfo.isParent)" 
                 class="btn btn-previous btn-left" type="button" (click)="viewTransactions()">
                 Cancel
               </button>
